--- a/sample-01/package.json
+++ b/sample-01/package.json
@@ -29,6 +29,7 @@
     "morgan": "^1.9.1",
     "npm-run-all": "^4.1.5",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.6.0",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.0",
@@ -37,9 +38,12 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.10.1",
     "@testing-library/react": "^10.3.0",
+    "autoprefixer": "^9.8.6",
     "jest-environment-jsdom-sixteen": "^1.0.3",
     "jest-fetch-mock": "^3.0.3",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "postcss": "^7.0.35",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.2"
   },
   "eslintConfig": {
     "extends": "react-app"
